--- a/src/about.html
+++ b/src/about.html
@@ -17,9 +17,9 @@
               height: 100%;
           }
 
-              width: 0;
-              height: 0;
-          }
+              /* width: 0;
+              height: 0; */
+          /* } */
       }
 
       body>div.preloader {
@@ -184,7 +184,7 @@
           </div>
           <div  class="col-lg-6">
           <img height="600" width="600"
-          style=""
+      
           alt="Image placeholder"
           src="assets/img/svg/illustrations/export-tom-fisk-3856433.jpg"
           id=""
