--- a/src/index.html
+++ b/src/index.html
@@ -416,7 +416,7 @@
           </div>
           <div  class="col-lg-6">
           <img height="600" width="600"
-          style=""
+       
           alt="Image placeholder"
           src="assets/img/svg/illustrations/export-tom-fisk-3856433.jpg"
           id=""
@@ -462,7 +462,7 @@
 
     <section class="slice slice-lg mt-4">
       <div class="container text-center">
-        <h4><span class="badge badge-lg badge-primary badge-pill text-center" style="background-color: #3ea4f4; color: white;">Our vision</span></h4>
+        <h4><span class="badge badge-lg badge-primary badge-pill text-center" style="background-color: #3ea4f4; color: white;">Vision</span></h4>
         <div class="row mt-4">
           <div class="col-lg-12 pr-lg-5 ">
             <p class="h5 lh-180 mb-3">
@@ -487,7 +487,7 @@
         </div>
       </div>
       <div class="container text-center">
-          <h4><span class="badge  badge-lg badge-primary badge-pill text-center" style="background-color: #3ea4f4; color: white;">Our mission</span></h4>
+          <h4><span class="badge  badge-lg badge-primary badge-pill text-center" style="background-color: #3ea4f4; color: white;">Mission</span></h4>
         <div class="row mt-4">
           <div class="col-lg-12 pr-lg-5">
             <p class="h5 lh-180 mb-3 ">
@@ -513,11 +513,18 @@
         </div>
       </div>
       <div class="container text-center">
-        <h4 ><span class="badge badge-lg badge-secondary badge-pill text-center h1" style="background-color: #3ea4f4; color: white;"> Our values</span></h4>
+        <h4 ><span class="badge badge-lg badge-secondary badge-pill text-center h1" style="background-color: #3ea4f4; color: white;"> Core values</span></h4>
         <div class="row mt-4">
           <div class="col-lg-12 pr-lg-5 ">
             <p class="h5 mb-3 ">
-              To provide cost-effective, befitting business solutions
+              To build a unique brand, we embed the following value into everything we do:
+              <ul class="h6  ">
+                <li>Innovation: <span >We strive to find better ways of doing things.</span></li>
+                <li>Pace & Ambition: <span >We are passionate about what we do and act promptly to achieve our goals.</span></li>
+                <li>Hunger to Learn: <span >We seize any and every opportunity to develop and to become the best we can be.</span></li>
+                <li>Integrity: <span >We are genuine and honest.</span></li>
+                <li>Teamwork: <span >We support you and we support ourselves - everyone's contribution counts.</span></li>
+              </ul>
             </p>
           </div>
           <div class="col-lg-6">
