--- a/src/index.html
+++ b/src/index.html
@@ -518,7 +518,7 @@
           <div class="col-lg-12 pr-lg-5 ">
             <p class="h5 mb-3 ">
               To build a unique brand, we embed the following value into everything we do:
-              <ul class="h6  ">
+              <ul class="h6  " style="text-decoration: none; list-style: none;" > 
                 <li>Innovation: <span >We strive to find better ways of doing things.</span></li>
                 <li>Pace & Ambition: <span >We are passionate about what we do and act promptly to achieve our goals.</span></li>
                 <li>Hunger to Learn: <span >We seize any and every opportunity to develop and to become the best we can be.</span></li>
@@ -1057,7 +1057,7 @@
                 <p class="mt-4 text-sm opacity-8 pr-lg-4" style="color:  rgb(61, 61, 61);">
                   <b>Address:</b> 21, Joseph Ogunleye Street, Abule-Egba, Lagos State.
                  <br /> <br />
-                 <b>Email:</b> info@romicxpresslogisticsltd.com <br />
+                 <b>Email:</b> info@romicxpresslogistics.com <br />
                  <b>Phone:</b> +234 802 850 3261, +234 706 464 2721
                 </p>
                 
